# nanoserp

./: .coveragerc  .env.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  templatize
.claude/: settings.json
.claude/commands/: templatize.md
.github/workflows/: publish.yaml  test.yaml
migrations/: env.py  script.py.mako
nanoserp/: __init__.py  _version.py  cli.py  client.py  exceptions.py  models.py  scrape.py  search.py  settings.py
nanoserp/api/: main.py  security.py
nanoserp/api/example/: schemas.py  views.py
nanoserp/db/: session.py
tests/: conftest.py  test_cli.py  test_client.py  test_models.py  test_scrape.py  test_search.py
tests/api/: test_example.py  test_main.py
tests/db/: test_session.py
{{REPO_NAME_SNAKECASE}}/: client.py  exceptions.py  models.py  settings.py
{{REPO_NAME_SNAKECASE}}/api/: main.py  security.py
{{REPO_NAME_SNAKECASE}}/api/example/: views.py
{{REPO_NAME_SNAKECASE}}/db/: session.py
