[build-system]
requires = ["setuptools", "setuptools-scm"]

[project]
name = "{{REPO_NAME}}"
authors = [
    {name = "{{GIT_USER_NAME}}", email = "{{GIT_USER_EMAIL}}"},
]
description = "{{REPO_NAME}}"
license = {text = "MIT"}
dynamic = ["version", "readme"]  # NOTE: Must be in sync with [tool.setuptools.dynamic] below
dependencies = [
    # TODO: Pin all dependencies to a specific version!
    "alembic",
    "asyncpg",
    "fastapi",
    "greenlet",
    "httpx",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "sqlmodel",
    "uvicorn",
]
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3"]

[tool.setuptools.dynamic]
# NOTE: Must be in sync with 'project.dynamic' above
version = {attr = "{{REPO_NAME_SNAKECASE}}.VERSION"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
exclude = ["tests"]

# extra packages (e.g. pip install .[dev])
[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-postgresql",
    "ruff",
    "ty",
]


# ----- Linting, Formatting, and Typing -----

[tool.black]
line-length = 88

[tool.mypy]
files = "{{REPO_NAME_SNAKECASE}}/"
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report term-missing"
filterwarnings = "ignore:.*.:DeprecationWarning"

[tool.ruff]
line-length = 88
[tool.ruff.lint]
ignore = ["B905", "E501"]
select = [
    "B",
    "C",
    "E",
    "F",
    "I",
    "W"
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
[tool.ruff.lint.mccabe]
max-complexity = 18