[build-system]
requires = ["setuptools", "setuptools-scm"]

[project]
name = "nanoserp"
authors = [
    {name = "Frank Odom", email = "frank.odom.iii@gmail.com"},
]
description = "Nano SERP analysis library"
license = {text = "MIT"}
dynamic = ["version", "readme"]  # NOTE: Must be in sync with [tool.setuptools.dynamic] below
dependencies = [
    "httpx==0.28.1",
    "markdownify==1.2.2",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
]
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3"]

[project.scripts]
nanoserp = "nanoserp.cli:main"

[tool.setuptools.dynamic]
# NOTE: Must be in sync with 'project.dynamic' above
version = {attr = "nanoserp._version.VERSION"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
exclude = ["tests"]

# extra packages (e.g. pip install .[dev])
[project.optional-dependencies]
dev = [
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.15.0",
    "ty==0.0.16",
]


# ----- Linting, Formatting, and Typing -----

[tool.black]
line-length = 88

[tool.mypy]
files = "nanoserp/"
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report term-missing"
filterwarnings = "ignore:.*.:DeprecationWarning"

[tool.ruff]
line-length = 88
[tool.ruff.lint]
ignore = ["B905", "E501"]
select = [
    "B",
    "C",
    "E",
    "F",
    "I",
    "W"
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
[tool.ruff.lint.mccabe]
max-complexity = 18
